# cookiecutter-ml-research

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: python-package.yml
amlt_example/: .amltconfig  example_job.yaml  example_job_script.py  example_openai_call.py  readme.md  requirements.txt
amlt_example/example_chansingh/: .amltconfig  example_job.yaml  example_job_mi200_deprecated.yaml  example_job_openai.yaml  example_job_uai.yaml
amlt_example/example_internblobdl/: .amltconfig  example_job.yaml
amlt_example/example_mountcastle/: .amltconfig  example_job.yaml  example_job_mountcastle.yaml
experiments/: 01_train_model.py  data.py
notebooks/: 01_model_results.ipynb
project_name/: model.py
scripts/: 01_train_basic_models.py  01_train_linear_models.py  submit_utils.py
src/: config.py
tests/: test_amlt_mi200.yaml  test_cpu.yaml  test_openai.py  test_openai_audio.py  test_openai_keyless.py  test_openai_keyless1.py  test_openai_old_key1.py  test_openai_old_key2.py  test_openai_trapi.py  test_pipeline.py
